# MicroHack

./: .gitignore  CONTRIBUTING.md  HowtoContribute.md  README.md  SUPPORT.md  lab-defaults-schema.json
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yaml  featurerequest.yaml  request.yaml
.github/agents/: hack-compliance-validator.agent.md
.github/scripts/: check_file_structure.py
.github/workflows/: ansible-deploy.yml  full-dg-tf-deploy.yml  full-tf-ansible-deploy.yml  pr-compliance-check.yml  terraform-deploy.yml
01-Identity and Access Management/1-MicroHack-ZeroTrust/: Readme.md
02-Security/: Readme.md
02-Security/1-MicroHack-Log-Analytics/: Architecture.drawio  readme.md
03-Azure/01-04-AI/: Readme.md
03-Azure/01-04-AI/03_Inventory_Planning_Agentic/src/: README.md  agent_runtime.py  config.py  inventory_store.py  live.py  mcp_server.py  orchestrator.py  pyproject.toml  tools.py  workflow.py
03-Azure/01-04-AI/03_Inventory_Planning_Agentic/src/agents/: __init__.py
03-Azure/01-04-AI/03_Inventory_Planning_Agentic/src/data/: external_signals.json  inventory_overrides.json  products.json  replenishment_orders.json  stores.json  suppliers.json
03-Azure/01-04-AI/03_Inventory_Planning_Agentic/src/ui/: app.py
03-Azure/01-04-AI/03_Inventory_Planning_Agentic/src/ui/static/: index.html
04-Microsoft-365/: Readme.md
05-BareMetal-NutanixCloudClusters/: Readme.md
10-Azure NetApp Files Microhack VDI-AVD /: readme.md
99-MicroHack-Template/: Readme.md
99-MicroHack-TemplateLink/: Readme.md
Azure NetApp Files/: readme.md
(+1661 files in other folders)
